# Doughnut

./: .gitmodules  CMakeLists.txt  FetchDependencies.cmake  README.md  Util.cmake  imgui.cmake  util.cmake  vcpkg.json
demo/: CMakeLists.txt  main.cpp
include/: application.h  preprocessor.h  typedefs.h
include/core/: late_init.h  scheduler.h  types.h  with_index.h
include/ecs/: ecs.h  entity_manager.h  entity_system_manager.h  system.h  system_manager.h
include/ecs/components/: input_state.h  projector.h  render_mesh.h  render_mesh_simplifiable.h  rotating_sphere.h  ui_state.h
include/ecs/entities/: camera.h  dense_sphere.h  input_state_entity.h  monkey.h  ui_state_entity.h
include/ecs/systems/: camera_controller.h  mesh_simplifier_controller.h  sphere_controller.h
include/graphics/: color_v2.h  colors.h  optional_features.h  push_constants_object.h  queue_family_indices.h  render_api.h  render_state.h  renderable.h  renderer.h  renderer_v2.h  shader.h  swapchain.h  texture.h  triangle.h  ui.h  ui_state.h  uniform_buffer_object.h  vertex.h
include/graphics/v1/: render_state.h  renderer.h
include/graphics/v1/vulkan/: pnext_chain_reader.h  vulkan_buffers.h  vulkan_devices.h  vulkan_images.h  vulkan_imgui.h  vulkan_instance.h  vulkan_memory.h  vulkan_renderpasses.h  vulkan_state.h  vulkan_swapchain.h  vulkan_validation.h
include/graphics/vulkan/: buffer.h  command_buffer.h  command_pipeline.h  command_pool.h  context.h  debug.h  descriptor_pool.h  descriptor_set.h  descriptor_set_layout.h  fence.h  framebuffer.h  gui.h  handle.h  image.h  image_staging_buffer.h  image_view.h  imgui.h  instance.h  memory.h  mesh_cache.h  optional_features.h  pipeline.h  pipeline_cache.h  queue_family_indices.h  render_pass.h  render_texture.h  sampler.h  semaphore.h  shader_module.h  staging_buffer.h  swapchain.h  texture_cache.h  vulkan_buffers.h  vulkan_devices.h  vulkan_images.h  vulkan_imgui.h  vulkan_instance.h  vulkan_memory.h  vulkan_renderpasses.h  vulkan_state.h  (+2 more)
include/graphics/vulkan/handles/: buffer.h  command_buffer.h  command_pool.h  descriptor_pool.h  descriptor_set_layout.h  fence.h  framebuffer.h  image.h  render_pass.h  sampler.h  semaphore.h  shader_module.h
include/io/: audio.h  filesystem.h  input_manager.h  logger.h  printer.h  resource_pool.h  window.h  window_manager.h
include/physics/: transformer.h
include/util/: byte_size.h  functions.h  importer.h  os.h  performance_logging.h  require.h  templates.h  timer.h
resources/models/: cube.glb  quad.glb
resources/shaders/: quad.frag  quad.vert  sphere.frag
shaders/: quad.frag  sphere.frag  sphere.vert
source/: application.cpp  main.cpp  test.cpp
source/core/: scheduler.cpp  thread_safe.h
source/ecs/: ecs.cpp  entity_manager.cpp  system_manager.cpp
source/ecs/components/: projector.cpp
source/ecs/entities/: camera.cpp  dense_sphere.cpp  input_state_entity.cpp  monkey.cpp  ui_state_entity.cpp
source/ecs/systems/: camera_controller.cpp  mesh_simplifier_controller.cpp  sphere_controller.cpp
source/graphics/: color_v2.cpp  projector.cpp  queue_family_indices.cpp  render_api.cpp  renderer_v2.cpp  shader.cpp  swapchain.cpp  texture.cpp  ui.cpp
source/graphics/renderer/: common.cpp  drawing.cpp  shaders.cpp  systems.cpp  ui.cpp
source/graphics/v1/: ui.cpp
source/graphics/v1/renderer/: common.cpp  drawing.cpp  shaders.cpp  systems.cpp  ui.cpp
source/graphics/v1/vulkan/: vulkan_buffers.cpp  vulkan_devices.cpp  vulkan_images.cpp  vulkan_imgui.cpp  vulkan_instance.cpp  vulkan_memory.cpp  vulkan_renderpasses.cpp  vulkan_swapchain.cpp  vulkan_validation.cpp
source/graphics/vulkan/: buffer.cpp  command_buffer.cpp  command_pipeline.cpp  command_pool.cpp  context.cpp  debug.cpp  descriptor_pool.cpp  descriptor_set.cpp  descriptor_set_layout.cpp  fence.cpp  framebuffer.cpp  gui.cpp  handle.cpp  image.cpp  image_staging_buffer.cpp  image_view.cpp  imgui.cpp  instance.cpp  memory.cpp  mesh_cache.cpp  pipeline.cpp  pipeline_cache.cpp  queue_family_indices.cpp  render_pass.cpp  render_texture.cpp  sampler.cpp  semaphore.cpp  shader_module.cpp  staging_buffer.cpp  swapchain.cpp  texture_cache.cpp  vulkan_buffers.cpp  vulkan_devices.cpp  vulkan_images.cpp  vulkan_imgui.cpp  vulkan_instance.cpp  vulkan_memory.cpp  vulkan_renderpasses.cpp  vulkan_swapchain.cpp  vulkan_validation.cpp
source/graphics/vulkan/handles/: buffer.cpp  command_buffer.cpp  command_pool.cpp  descriptor_pool.cpp  descriptor_set_layout.cpp  fence.cpp  framebuffer.cpp  image.cpp  image_view.cpp  render_pass.cpp  sampler.cpp  semaphore.cpp  shader_module.cpp
source/io/: audio.cpp  filesystem.cpp  input_manager.cpp  logger.cpp  window.cpp  window_manager.cpp
source/physics/: transformer.cpp
source/util/: importer.cpp  performance_logging.cpp  timer.cpp
test/include/: test_util.h
test/source/: entity_manager.cpp  main.cpp  scheduler.cpp  texture.cpp
test_include/: test_util.h
test_source/: main.cpp  scheduler.cpp  test_util.cpp
